--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
 <body>
     <div class="main">
+        <div class="cell bl bt"><span class="text"></span></div>
+        <div class="cell bt"><span class="text"></span></div>
+        <div class="cell bt br"><span class="text"></span></div>
+        <div class="cell bl"><span class="text"></span></div>
         <div class="cell"><span class="text"></span></div>
-        <div class="cell"><span class="text"></span></div>
-        <div class="cell"><span class="text"></span></div>
-        <div class="cell"><span class="text"></span></div>
-        <div class="cell"><span class="text"></span></div>
-        <div class="cell"><span class="text"></span></div>
-        <div class="cell"><span class="text"></span></div>
-        <div class="cell"><span class="text"></span></div>
-        <div class="cell"><span class="text"></span></div>
+        <div class="cell br"><span class="text"></span></div>
+        <div class="cell bl bb"><span class="text"></span></div>
+        <div class="cell bb"><span class="text"></span></div>
+        <div class="cell bb br"><span class="text"></span></div>
     </div>
 
     <h2 class="turns">Turn for X</h2>
