--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     <h2 class="over"></h2>
     <div id="message"></div>
     <button id="restart">Restart</button>
+    
+    <br>
+    
+    <div class= "contain"> </div>
 
 
     <script src="script.js"></script>
